# propulsion-notebook

./: .gitignore  BUILD.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  ROADMAP.md
examples/: CMakeLists.txt  basic_calculations.cpp
lib/: CMakeLists.txt  README.md
lib/include/propulsion/: orbital.hpp  rocket.hpp
scripts/: README.md
theory/: README.md  orbital_mechanics.md  quick_reference.md  rocket_fundamentals.md  satellite_systems.md
